--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@ layout: default
 
 <div class="home">
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Unit1 -->
+    <ins class="adsbygoogle"
+	 style="display:inline-block;width:728px;height:90px"
+	 data-ad-client="ca-pub-3956280229778905"
+	 data-ad-slot="4118150875"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  
   <h1>Posts</h1>
 
   <ul class="posts">
