--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-03-08-cros-entroy-成本函数.html">2017-03-08 成本函数与学习速度</a>
+</h3>
+<h3>
 <a href="blog/2017-03-05-backpropagation.html">2017-03-05 backpropagation</a>
 </h3>
 <h3>
