--- a/deploy/index.html
+++ b/deploy/index.html
@@ -30,7 +30,7 @@
 <a href="blog/2017-03-08-cros-entroy-成本函数.html">2017-03-08 成本函数与学习速度</a>
 </h3>
 <h3>
-<a href="blog/2017-03-08-用-markdown-写笔记.html">2017-03-08 用 markdown-写笔记</a>
+<a href="blog/2017-03-08-用-markdown-写笔记.html">2017-03-08 用 Makefile + pandoc + markdown 写博客</a>
 </h3>
 <h3>
 <a href="blog/2017-03-05-backpropagation.html">2017-03-05 backpropagation</a>
