--- a/deploy/index.html
+++ b/deploy/index.html
@@ -30,6 +30,9 @@
 <a href="blog/2017-03-09-Back-Propagation-算法的向量表示.html">2017-03-09 Back Propagation 算法的向量表示</a>
 </h3>
 <h3>
+<a href="blog/2017-03-09-成本函数和学习速度2.html">2017-03-09 成本函数与学习速度 sotfmax 函数与最大似然函数</a>
+</h3>
+<h3>
 <a href="blog/2017-03-08-cros-entroy-成本函数.html">2017-03-08 成本函数与学习速度</a>
 </h3>
 <h3>
