--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,15 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-03-12-存款准备金.html">2017-03-12 存款准备金</a>
+</h3>
+<h3>
+<a href="blog/2017-03-12-小叮当效应.html">2017-03-12 小叮当效应</a>
+</h3>
+<h3>
+<a href="blog/2017-03-10-过拟合和正则化.html">2017-03-10 过拟合和正则化</a>
+</h3>
+<h3>
 <a href="blog/2017-03-09-Back-Propagation-算法的向量表示.html">2017-03-09 Back Propagation 算法的向量表示</a>
 </h3>
 <h3>
