--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,18 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-03-16-使用--cmake-管理项目.html">2017-03-16 &quot;使用 cmake 管理项目&quot;</a>
+</h3>
+<h3>
+<a href="blog/2017-03-16-使用-google-test-framework.html">2017-03-16 &quot;使用 google test framework&quot;</a>
+</h3>
+<h3>
+<a href="blog/2017-03-16-google-c---style-by-examples.html">2017-03-16 &quot;google c++ style by examples&quot;</a>
+</h3>
+<h3>
+<a href="blog/2017-03-13-TERMINAL-下的快捷操作.html">2017-03-13 TERMINAL 下的快捷操作</a>
+</h3>
+<h3>
 <a href="blog/2017-03-12-存款准备金.html">2017-03-12 存款准备金</a>
 </h3>
 <h3>
