--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,12 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-03-26-c---模板的类型推导.html">2017-03-26 &quot;c++ 模板的类型推导&quot;</a>
+</h3>
+<h3>
+<a href="blog/a.html">2017-03-25 无主题</a>
+</h3>
+<h3>
 <a href="blog/2017-03-16-使用--cmake-管理项目.html">2017-03-16 &quot;使用 cmake 管理项目&quot;</a>
 </h3>
 <h3>
