--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-03-26-c---中-lambda-的类型和大小.html">2017-03-26 &quot;c++ 中 lambda 的类型和大小&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-03-26-c---模板的类型推导.html">2017-03-26 &quot;c++ 模板的类型推导&quot;</a>
 </h3>
 <h3>
