--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,12 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-04-02-c---lambda-capture-by-value-的实验.html">2017-04-02 &quot;c++ lambda capture by value 的实验&quot;</a>
+</h3>
+<h3>
+<a href="blog/2017-03-29-c-----中的-uniform-initialization.html">2017-03-29 &quot;c++11 中的 uniform initialization&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-03-29-c---vector--operator---的一个坑点.html">2017-03-29 &quot;c++ vector::operator[] 的一个坑点&quot;</a>
 </h3>
 <h3>
