--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-04-02-c---的-universal-reference.html">2017-04-02 &quot;c++ 的 universal reference&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-02-c---lambda-capture-by-value-的实验.html">2017-04-02 &quot;c++ lambda capture by value 的实验&quot;</a>
 </h3>
 <h3>
@@ -159,7 +162,7 @@
 <a href="blog/2015-07-10-ZFS-----.html">2015-07-10 &quot;ZFS 转移数据&quot;</a>
 </h3>
 <h3>
-<a href="blog/2015-07-08-C------------.html">2015-07-08 &quot;C++11 的右值引用问题&quot;</a>
+<a href="blog/2015-07-08-C-----的右值引用问题.html">2015-07-08 &quot;C++11 的右值引用问题&quot;</a>
 </h3>
 <h3>
 <a href="blog/2015-07-08-C---vector-A----A--A------.html">2015-07-08 &quot;C++ vector 调用多少次元素的构造函数&quot;</a>
