--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-04-03-有了c-----的-unique-ptr，也许就不应该再使用-new-delete-关键字了.html">2017-04-03 &quot;有了c++11 的 unique_ptr，也许就不应该再使用 new/delete 关键字了&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-02-c---的-universal-reference.html">2017-04-02 &quot;c++ 的 universal reference&quot;</a>
 </h3>
 <h3>
