--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-04-04-c---GSL-中的-owner.html">2017-04-04 &quot;c++ GSL 中的 owner&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-04-c---的-const-reference-extend-lifetime-rvalue.html">2017-04-04 &quot;c++ 的 const reference extend lifetime rvalue&quot;</a>
 </h3>
 <h3>
