--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-04-06-ssh-key-转发.html">2017-04-06 &quot;ssh 的无密码登陆&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-04-c---GSL-中的-owner.html">2017-04-04 &quot;c++ GSL 中的 owner&quot;</a>
 </h3>
 <h3>
