--- a/deploy/index.html
+++ b/deploy/index.html
@@ -30,6 +30,9 @@
 <a href="blog/2017-04-29-c-c---的编译和链接的问题.html">2017-04-29 &quot;c/c++ 的编译和链接的问题&quot;</a>
 </h3>
 <h3>
+<a href="blog/2017-04-23-c---的类变量传递性.html">2017-04-23 &quot;c++ non copyable 的传递性&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-06-ssh-key-转发.html">2017-04-06 &quot;ssh 的无密码登陆&quot;</a>
 </h3>
 <h3>
