--- a/deploy/index.html
+++ b/deploy/index.html
@@ -38,6 +38,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-04-30-c---中的-remove-erase-俗语.html">2017-04-30 &quot;c++ 中的 remove-erase 俗语&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-29-c-----的-extern-template.html">2017-04-29 &quot;c++11 的 extern template&quot;</a>
 </h3>
 <h3>
