--- a/deploy/index.html
+++ b/deploy/index.html
@@ -38,6 +38,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-05-14-c---中的高维数组.html">2017-05-14 &quot;c++ 中的高维数组&quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-04-30-Walter-E--Brown-讲解-c---中的-metaprograming.html">2017-04-30 &quot;Walter E. Brown 讲解 c++ 中的 metaprograming&quot;</a>
 </h3>
 <h3>
