--- a/deploy/index.html
+++ b/deploy/index.html
@@ -38,6 +38,9 @@
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
 <h3>
+<a href="blog/2017-06-18-用c---编写一个-list-操作程序-.html">2017-06-18 &quot;用c/c++ 编写一个 list 操作程序 &quot;</a>
+</h3>
+<h3>
 <a href="blog/2017-05-21-c---中的高维数组.html">2017-05-21 &quot;c++ 中的高维数组(2)&quot;</a>
 </h3>
 <h3>
