--- a/deploy/index.html
+++ b/deploy/index.html
@@ -37,8 +37,7 @@
 <main>
 <article>
 <h2 id="wcy123-的主页">wcy123 的主页</h2>
-<h3>
-<a href="blog/2017-07-09-计算一个整数有的二进制表示中多少个---.html">2017-07-09 &quot;计算一个整数有的二进制表示中多少个 1 &quot;</a>
+7-07-09-计算一个整数有的二进制表示中多少个---.html&quot;&gt;2017-07-09 &quot;计算一个整数有的二进制表示中多少个 1 &quot;</a>
 </h3>
 <h3>
 <a href="blog/2017-06-18-用c---编写一个-list-操作程序-.html">2017-06-18 &quot;用c/c++ 编写一个 list 操作程序 &quot;</a>
